final commit for uni gp ISA

--- a/gp_related/draft_hier.ipynb
+++ b/gp_related/draft_hier.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# draft code used to be in class MyLogger(Logger)'s __init()__ method\n",
+    "# draft code used to be in class CustomCSVLogger(Logger)'s __init()__ method\n",
     "# used to set up initial history keys\n",
     "num_output_layers = 6\n",
     "\n",
@@ -318,7 +318,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# useless draft code for log_metrics() function in MyLogger class:\n",
+    "# useless draft code for log_metrics() function in CustomCSVLogger class:\n",
     "# ... code above\n",
     "for metric_name, metric_val in metrics.items():\n",
     "\n",
