--- a/gp_related/separating_screenshots_from_photos.ipynb
+++ b/gp_related/separating_screenshots_from_photos.ipynb
@@ -232,7 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Separating Screenshots From Photos Using get_highest_color_counts()"
+    "# Separating Screenshots From Photos Using getHighestColorCounts()"
    ]
   },
   {
@@ -251,7 +251,7 @@
     "    B = color & 0xFF\n",
     "    return (R, G, B)\n",
     "\n",
-    "def get_highest_color_counts(img, top_n=3):\n",
+    "def getHighestColorCounts(img, top_n=3):\n",
     "    \"\"\"\n",
     "    Get a list of (count, color) tuples for each pixel color in the image\n",
     "\n",
@@ -292,6 +292,41 @@
     "    \n",
     "    # Return the top N colors with their counts\n",
     "    return top_n_color_and_color_to_image_ratio\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# note: this function is made just to combine the code presented in the rest of this notebook in a single function\n",
+    "# however, we initially ran the code without refactoring it into the function mentioned here\n",
+    "def sortImgsBasedOnFunctionValue(path_to_folder, sort_by, function, **function_kwargs):\n",
+    "    # Create a dictionary to store the images\n",
+    "    image_dict = {}\n",
+    "    for filename in os.listdir(path_to_folder):\n",
+    "        # Check if the file is an image\n",
+    "        filename_lower = filename.lower()\n",
+    "        if filename_lower.endswith('.jpg') or filename_lower.endswith('.png') or filename_lower.endswith('.jpeg'):\n",
+    "            # Open the image file\n",
+    "            img_path = os.path.join(path_to_folder, filename)\n",
+    "            img = Image.open(img_path) \n",
+    "            img = img.convert('RGB')\n",
+    "            # img = img.resize((306,306))\n",
+    "\n",
+    "            # Calculate the max color count and add it to the list\n",
+    "            print(filename)\n",
+    "            max_color_count = function(img, **function_kwargs)\n",
+    "\n",
+    "            # Add the image to the dictionary with its max pixel value\n",
+    "            image_dict[filename] = {'max_color_count': max_color_count[0][1], 'image': img_path}\n",
+    "            # img.close()\n",
+    "\n",
+    "    # Sort the list of tuples by the second value (max pixel value) in descending order\n",
+    "    image_list = sorted(image_dict.items(), key=lambda x: x[1][sort_by], reverse=True)\n",
+    "    \n",
+    "    return image_dict, image_list"
    ]
   },
   {
@@ -2013,7 +2048,6 @@
    "source": [
     "# draft, debugging: seeing a good threshold to split screenshots from photos taken by a camera (this and next cell)\n",
     "path_to_folder = '../academicimagestemp/Ashraf2'\n",
-    "max_color_counts = []\n",
     "# Create a dictionary to store the images\n",
     "image_dict = {}\n",
     "\n",
@@ -2029,7 +2063,7 @@
     "\n",
     "        # Calculate the max color count and add it to the list\n",
     "        print(filename)\n",
-    "        max_color_count = get_highest_color_counts(img, top_n=1)\n",
+    "        max_color_count = getHighestColorCounts(img, top_n=1)\n",
     "\n",
     "        # Add the image to the dictionary with its max pixel value\n",
     "        image_dict[filename] = {'max_color_count': max_color_count[0][1], 'image': img_path}\n",
@@ -5193,7 +5227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_text_boxes_num(img):\n",
+    "def getTextBoxesNum(img, **kwargs):\n",
     "    try:\n",
     "        return len(paddle_ocr.ocr(np.array(img), det=True, rec=False, cls=True)[0])\n",
     "    except:\n",
@@ -21420,7 +21454,6 @@
    "source": [
     "# draft, debugging: seeing a good threshold to split screenshots from photos taken by a camera (this and next cell)\n",
     "path_to_folder = '../dataset/70. eGreetingAndMisc/'\n",
-    "max_color_counts = []\n",
     "# Create a dictionary to store the images\n",
     "image_dict_2 = {}\n",
     "\n",
@@ -21435,7 +21468,7 @@
     "\n",
     "        # Calculate the max color count and add it to the list\n",
     "        print(filename)\n",
-    "        text_boxes_num = get_text_boxes_num(img)\n",
+    "        text_boxes_num = getTextBoxesNum(img)\n",
     "\n",
     "        # Add the image to the dictionary with its max pixel value\n",
     "        image_dict_2[filename] = {'text_boxes_num': text_boxes_num, 'image': img_path}\n",
@@ -25054,7 +25087,7 @@
    "metadata": {},
    "source": [
     "# For illustration only: \n",
-    "Separating Screenshots From Photos Using get_highest_color_counts()"
+    "Separating Screenshots From Photos Using getHighestColorCounts()"
    ]
   },
   {
@@ -25092,7 +25125,6 @@
    "source": [
     "# draft, debugging: seeing a good threshold to split screenshots from photos taken by a camera (this and next cell)\n",
     "path_to_folder = '../academicimagestemp/tmp/'\n",
-    "max_color_counts = []\n",
     "# Create a dictionary to store the images\n",
     "image_dict = {}\n",
     "\n",
@@ -25108,7 +25140,7 @@
     "\n",
     "        # Calculate the max color count and add it to the list\n",
     "        print(filename)\n",
-    "        max_color_count = get_highest_color_counts(img, top_n=1)\n",
+    "        max_color_count = getHighestColorCounts(img, top_n=1)\n",
     "\n",
     "        # Add the image to the dictionary with its max pixel value\n",
     "        image_dict[filename] = {'max_color_count': max_color_count[0][1], 'image': img_path}\n",
@@ -25344,7 +25376,9 @@
    "outputs": [],
    "source": [
     "# debugging:\n",
-    "# by manually checking the image's displays, we see that most of the images until index 8 are screenshots, so we'll move these images\n",
+    "# by manually checking the image's displays, \n",
+    "# we see that most of the images until index 8 are screenshots, \n",
+    "# so we'll move these images\n",
     "for i, filename in enumerate([filename_and_dict[0] for filename_and_dict in image_list]):\n",
     "    if i == 8:\n",
     "        break\n",
