--- a/gp_related/debugging_cells_for_getImgsPropsDf_logic.ipynb
+++ b/gp_related/debugging_cells_for_getImgsPropsDf_logic.ipynb
@@ -428,6 +428,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -740,6 +741,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ashra\\AppData\\Local\\Temp\\ipykernel_35608\\1513324702.py:2: DtypeWarning: Columns (25,28,30) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  props = pd.read_csv('../dataset_related/imgsPropsv1.csv')\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "props = pd.read_csv('../dataset_related/imgsPropsv1.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "يوم متخيل قمر في به الايام كنت ٧٧ حزين وكنت مقدر نعمة اني سنة "
+     ]
+    }
+   ],
+   "source": [
+    "for word in props.iloc[93861]['ar_words_original'].split(' '):\n",
+    "    print(word, end=' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "مبسوطه لما خلصتي و الفلوس لقوا معاكي دمر تىر ياحسن "
+     ]
+    }
+   ],
+   "source": [
+    "for word in props.iloc[93862]['ar_words_original'].split(' '):\n",
+    "    print(word, end = ' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
@@ -1020,8 +1076,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.15"
   },
   "orig_nbformat": 4
  },
